<resources>
    <string name="app_name">LoginDemo</string>
    <string name="login">Login</string>
    <string name="this_is_second_activity">This is second activity</string>
    <string name="no_of_incorrect_attempts">No of incorrect attempts:</string>
    <string name="no_of_attempts_remaining">No of attempts remaining:</string>
    <string name="admin_ferrum_edu">admin@ferrum.edu</string>
    <string name="welcome_to_panther_talks">Welcome to Panther Talks!</string>
    <string name="ferrum_email">Ferrum Email:</string>
    <string name="password">Password:</string>
    <string name="Btn_Post" />
    <string name="Btn_CreatePost">Post</string>
    <string name="meal_swipes">Meal Swipes:</string>
    <string name="first_last">First Last</string>
    <string name="panther_talks">Panther Talks</string>
    <string name="swipes_left">Swipes Left</string>
    <string name="dining_dollars">Dining Dollars:</string>
    <string name="dining_dollars_left">Dining Dollars Left</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="events_timeline">Events Timeline</string>
    <string name="logout">Logout</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="search">Search</string>
    <string name="pages">Pages</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="event_name">Event Name</string>
    <string name="date_time2">Date and Time</string>
    <string name="location">Location</string>
    <string name="club_name">Club Name</string>
    <string name="rsvp2">RSVP</string>
    <string name="cancel">Cancel</string>
    <string name="create_event">Create Event</string>
    <string name="event_name_colon">Event Name:</string>
    <string name="event_local">Location:</string>
    <string name="event_time_colon">Time of Event:</string>
    <string name="event_date_colon">Date of Event:</string>
    <string name="description">Event Description:</string>
    <string name="sponsor">Sponsor:</string>
    <string name="syl">SYL</string>
    <string name="fgk">FGK</string>
    <string name="kys">KYS</string>
    <string name="delta_love">DeltaLove</string>
    <string name="txtV_suggest">Suggested Pages:</string>
    <string name="txtV_pfollow">Pages You Follow:</string>
    <string name="img_profile" />
    <string name="txtV_msg">MESSAGES</string>
    <string name="register">Register</string>


</resources>
