<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">
    <TextView
        android:id="@+id/Title"
        android:layout_width="360px"
        android:layout_height="98dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="453dp"
        android:background="#FDCA2E"
        android:gravity="center"
        android:shadowColor="#FFFFFF"
        android:text="@string/panther_talks"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Btn_home"
        app:layout_constraintStart_toEndOf="@+id/Txt_Name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Btn_search"
        android:layout_width="85dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="186dp"
        android:background="#fdca2e"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintVertical_bias="1.0"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/Btn_home"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="216px"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="70dp"
        android:background="#000000"
        android:text="@string/home"
        android:textColor="#FDCA2E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Txt_Name"
        android:layout_width="360px"
        android:layout_height="98dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="116dp"
        android:background="#FDCA2E"
        android:gravity="center"
        android:text="@string/first_last"
        android:textAlignment="center"
        android:textDirection="ltr"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Btn_home"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Btn_Events"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="216px"
        android:layout_height="51dp"
        android:width="216px"
        android:background="#FDCA2E"
        android:shadowColor="#00FFFFFF"
        android:text="@string/events"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Btn_Profile"
        app:layout_constraintStart_toEndOf="@+id/Btn_home" />

    <Button
        android:id="@+id/Btn_Profile"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:background="#FDCA2E"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Btn_Events" />

    <Button
        android:id="@+id/Btn_Pages"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="216px"
        android:layout_height="51dp"
        android:layout_marginTop="582dp"
        android:background="#FDCA2E"
        android:text="@string/pages"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Btn_search"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Txt_Name"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Btn_logout"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="360px"
        android:layout_height="98dp"
        android:layout_marginBottom="581dp"
        android:background="#FDCA2E"
        android:text="@string/logout"
        app:layout_constraintBottom_toTopOf="@+id/Btn_Events"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <view
        android:id="@+id/viewSearch"
        class="androidx.appcompat.widget.SearchView"
        android:layout_width="387dp"
        android:layout_height="446dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/Btn_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>