<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessagesActivity">
    <TextView
        android:id="@+id/Title"
        android:layout_width="137dp"
        android:layout_height="98dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="453dp"
        android:background="#FDCA2E"
        android:gravity="center"
        android:shadowColor="#FFFFFF"
        android:text="@string/panther_talks"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Btn_home"
        app:layout_constraintStart_toEndOf="@+id/Txt_Name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Btn_search"
        android:layout_width="85dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="186dp"
        android:background="#fdca2e"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintVertical_bias="1.0"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/Btn_home"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="85dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="70dp"
        android:background="#FDCA2E"
        android:text="@string/home"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/Txt_Name"
        android:layout_width="137dp"
        android:layout_height="98dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="116dp"
        android:background="#FDCA2E"
        android:gravity="center"
        android:text="@string/first_last"
        android:textAlignment="center"
        android:textDirection="ltr"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Btn_home"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Btn_Profile"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="85dp"
        android:layout_height="51dp"
        android:background="#FDCA2E"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Btn_Pages"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="85dp"
        android:layout_height="51dp"
        android:background="#FDCA2E"
        android:text="@string/pages"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Btn_search"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/Btn_logout"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="137dp"
        android:layout_height="98dp"
        android:layout_marginBottom="581dp"
        android:background="#FDCA2E"
        android:text="@string/logout"
        app:layout_constraintBottom_toTopOf="@+id/Btn_Events"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Btn_Events"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="85dp"
        android:layout_height="51dp"
        android:background="#FDCA2E"
        android:shadowColor="#00FFFFFF"
        android:text="@string/events"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Btn_Profile" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="451dp"
        android:background="#000000"
        android:fontFamily="@font/acme"
        android:text="@string/txtV_msg"
        android:textAlignment="center"
        android:textColor="#FDCA2E"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/Btn_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintVertical_bias="1.0" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="449dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/Btn_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>